base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: perf-dashboard
  labels:
    app: perf-dashboard
  annotations:
    haproxy.router.openshift.io/timeout: 10m
    haproxy.router.openshift.io/disable_cookies: "true"
    haproxy.router.openshift.io/timeout-tunnel: 10m
spec:
  to:
    kind: Service
    name: perf-dashboard
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
